# apfinger

./: .gitignore  CMakeLists.txt  README.md  package.xml
Altium/finger side ver.1.0 addr 1110000(rw)/: CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic3.Cam  CAMtastic4.Cam  PCB_Project1.PrjPCB  PCB_Project1.PrjPCBStructure  main_pcb.PcbDoc
Altium/finger side ver.1.0 addr 1110000(rw)/Project Outputs for PCB_Project1/: Status Report.Txt  main_pcb.EXTREP  main_pcb.GBL  main_pcb.GKO  main_pcb.GM1  main_pcb.GTL  main_pcb.GTO  main_pcb.LDP  main_pcb.REP  main_pcb.RUL  main_pcb.apr
Altium/finger side ver.1.0 addr 1110000(rw)/__Previews/: main_pcb.PcbDocPreview  main_pcb2.PcbDocPreview  main_schematic.SchDocPreview
Altium/finger side ver.1.0 before ground-beta/: main_pcb.PcbDoc  main_schematic.SchDoc
Altium/finger side ver.1.1 before ground-beta/: main_pcb.PcbDoc  main_schematic.SchDoc
Altium/finger side ver1.1 addr 1110001(rw)/: VCNL4040a.PcbLib  main_pcb.PcbDoc
Altium/finger side ver1.2 before ground-beta/: PCA9547.PcbLib  PCA9547.SchLib  PCB_Project1.PrjPCB  main_pcb.PcbDoc  main_schematic.SchDoc
Altium/finger top ver1.0 addr 1110010(rw)/: main_pcb.PcbDoc
Altium/finger top ver1.0 addr before ground-beta/: PCB_Project1.PrjPCB  Pban_nagamatsu_20150901.RUL  main_pcb.PcbDoc  main_schematic.SchDoc
Altium/finger top ver1.1 before ground-beta/: main_pcb.PcbDoc
Altium/finger top ver1.2 before ground-beta/: VCNL4040.SchLib  main_pcb.PcbDoc  main_schematic.SchDoc
Arduino/pca_test/: pca_test.ino
Arduino/prox_ros_left/: prox_ros_left.ino
Arduino/prox_ros_right/: prox_ros_right.ino
Arduino/vcnl_test/: vcnl_test.ino
config/: proximity.yaml
euslisp/: calibration-proximity.l  distance-publisher.l  dummy-proximity-publisher.l  publish-pointcloud.l  publish-sensor-tf.l  utils.l
gripper_cad/fetch_gripper1/: gripper_inside1.SLDPRT  gripper_outside1.SLDPRT
gripper_cad/fetch_gripper2/: gripper2.SLDASM  gripper_inside2.SLDPRT  gripper_inside2.STL  gripper_outside2.SLDPRT  gripper_outside2.STL  gripper_outside2_asm.SLDPRT
gripper_cad/fetch_gripper3/: gripper3.SLDASM  gripper_inside3.SLDPRT  gripper_inside3.STL  gripper_outside3.SLDPRT  gripper_outside3.STL
gripper_cad/fetch_gripper4/: gripper_asm.SLDASM  gripper_inside4.SLDPRT  gripper_outside4_left.SLDPRT  gripper_outside4_left.STL  gripper_outside4_right.SLDPRT  gripper_outside4_right.STL
gripper_cad/fetch_gripper_old/: fetch_gripper.SLDPRT
gripper_cad/main project(old)/: CAMtastic1.Cam  CAMtastic6.Cam  PCA9547.SchLib  PCB1.PcbDoc  PCB_Project1.PrjPCB  VCNL4040.PcbLib  VCNL4040.SchLib  VCNL4040a.PcbLib  main_pcb.PcbDoc  main_pcb2.PcbDoc  main_schematic.SchDoc  test.PcbDoc
launch/: play_rosbag.launch  proximity.launch  record_rosbag.launch  standalone.launch
msg/: DistanceAndProximity.msg  GripperPosAndProximity.msg  Proximities.msg  ProximityArray.msg  ProximityStamped.msg  ProximityStates.msg
node_scripts/: decompose_msg.py  publish_pointcloud.py
rviz/: proximity_sensor_marker.rviz
(+50 files in other folders)
